--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">TOLEAGRI</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Estoque" asp-action="Index">TOLEAGRI</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -34,6 +34,7 @@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+        <div id="modalTOLEAGRI"></div>
     </div>
 
     <footer class="border-top footer text-muted">
