Sucesso em abrir a view (é necessaio que a pasta view e a pasta controller fique direto no projeto e não dentro de outra pasta. Caso fique dentro de  outra, deve-se expecificar o caminho completo.
Comecei a mexer na index principal (estoque)

--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -6,8 +6,8 @@
 
 <div style="padding:40px" id="container" class="justify-content-between">
     <div>
-        <h1 class="text-center mb-3">Chamados</h1>
-        <div class="mb-4" style="display:flex;justify-content:space-between">
+        <h1 class="text-center mb-3">Estoque</h1>
+        @* <div class="mb-4" style="display:flex;justify-content:space-between">
             <div>
                 <a class="btn btn-outline-dark" id="btn-CriarChamado">Criar um chamado</a>
                 <a type="button" asp-controller="Cliente" asp-action="Index" class="btn btn-outline-dark">Clientes</a>
@@ -16,8 +16,9 @@
             <div style="display:flex">
                 <input type="text" id="Pesquisa" class="form-control" placeholder="Buscar">
             </div>
-        </div>
+        </div> *@
     </div>
+    <div">
     <table class="table">
         <thead>
             <tr>
@@ -33,9 +34,9 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
+            @foreach (var item in estoquesOrdenados)
             {
-                <tr class="chamado-row">
+                <tr>
                     <td>@item.CodigoSistema</td>
                     <td>@item.Locacao</td>
                     <td>@item.Marca</td>
@@ -48,4 +49,5 @@
             }
         </tbody>
     </table>
+    </div>
 </div>
