Atualização no dominio, ajustando data e quantidade de entrada e saida.
Criação de modal para adicionar entrada e saida. E tentativa de abertura do modal para que busque a peça pelo código para poder editar ou se não tiver codigo no banco, que crie um novo registro então

--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -8,17 +8,17 @@
     <div>
         <h1 class="text-center mb-3">Estoque</h1>
         <div class="mb-4" style="display:flex;justify-content:space-between">
-            @* <div>
-            <a class="btn btn-outline-dark" id="btn-CriarChamado">Criar um chamado</a>
-            <a type="button" asp-controller="Cliente" asp-action="Index" class="btn btn-outline-dark">Clientes</a>
-            <a type="button" asp-controller="Chamado" asp-action="Historico" class="btn btn-outline-dark">Histórico</a>
-            </div> *@
+            <div>
+            <a class="btn btn-outline-dark" id="btn-EntradaEstoque">Entrada</a>
+            <a class="btn btn-outline-dark" id="btn-SaidaEstoque">Saída</a>
+                <a type="button" asp-controller="Estoque" asp-action="Historico" class="btn btn-outline-dark">Histórico</a>
+            </div>
             <div style="display:flex">
                 <input type="text" id="Pesquisa" class="form-control" placeholder="Buscar">
             </div>
         </div>
     </div>
-    <table class="table">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Código</th>
@@ -26,10 +26,7 @@
                 <th>Marca</th>
                 <th>Modelo</th>
                 <th>Quantidade</th>
-                <th>Quantidade de saida</th>
-                <th>Data de envio</th>
                 <th>Observação</th>
-                <th>Opções</th>
             </tr>
         </thead>
         <tbody>
@@ -41,11 +38,46 @@
                     <td>@item.Marca</td>
                     <td>@item.Modelo</td>
                     <td>@item.Quantidade</td>
-                    <td>@item.QuantidadeSaida</td>
-                    <td>@item.DataEnvio</td>
                     <td>@item.Observacao</td>
+                    @* <td style="width:1px">
+                        <a onClick="AdicionarEntrada(@item.Id)">
+                            <i class="bi bi-check-square"></i>
+                        </a>
+                        <a onClick="AdicionarSaida(@item.Id)">
+                            <i class="bi-pencil-square"></i>
+                        </a>
+                        <a onClick="Deletar(@item.Id)">
+                            <i class="bi bi-trash3-fill"></i>
+                        </a>
+                    </td> *@
                 </tr>
             }
         </tbody>
     </table>
 </div>
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+<script>
+    
+    $(document).ready(function () {
+        $("#btn-EntradaEstoque").click(function (event) {
+
+            $.get("/Estoque/BuscarOuCriarEstoque", function (data) {
+                $("#modalTOLEAGRI").html(data);
+                $("#modalEntradaEstoque").modal("show");
+            });
+        });
+    });
+
+            function ModalSaidaEstoque(idEstoque) {
+                event.preventDefault();
+
+                $.get("/Estoque/ModalSaidaEstoque", function (data) {
+                    $("#modalTOLEAGRI").html(data);
+                    $("#modalSaidaEstoque").modal("show");
+                });
+            });
+    });
+
+</script>
