--- a/Views/Estoque/Modal/EntradaEstoque.cshtml
+++ b/Views/Estoque/Modal/EntradaEstoque.cshtml
@@ -1,4 +1,4 @@
-﻿@model TOLEAGRI.Model.Domain.Estoque
+﻿@model TOLEAGRI.Model.Domain.Peca
 
 @{
     Layout = null;
@@ -14,7 +14,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="mb-3">
-                        <input asp-for="EstoqueId" type="hidden">
+                        <input asp-for="PecaId" type="hidden">
                         <input required asp-for="DataEntrada" type="date" class="form-control mb-2" id="DataEntrada">
                         <input required asp-for="CodigoSistema" type="text" class="form-control mb-2" id="CodigoSistema" placeholder="Código">
                         <input required asp-for="Locacao" type="text" class="form-control mb-2" id="Locacao" placeholder="Locação">
@@ -54,3 +54,84 @@
 });
     }
 </script> *@
+
+
+
+
+
+
+
+
+    @model IEnumerable<TOLEAGR.Model.Domain.Peca>
+@{
+    ViewData["Title"] = "Pecas";
+    var PecasOrdenados = Model.OrderByDescending(c => c.CodigoSistema).ToList();
+}
+
+<div style="padding:40px" id="container" class="justify-content-between">
+    <div>
+        <h1 class="text-center mb-3">Estoque</h1>
+        <div class="mb-4" style="display:flex;justify-content:space-between">
+            <div>
+                <a class="btn btn-outline-dark" id="btn-EntradaEstoque">Entrada</a>
+                <a class="btn btn-outline-dark" id="btn-SaidaEstoque">Saída</a>
+                <a type="button" asp-controller="Estoque" asp-action="Historico" class="btn btn-outline-dark">Histórico</a>
+            </div>
+            <div style="display:flex">
+                <input type="text" id="Pesquisa" class="form-control" placeholder="Buscar">
+            </div>
+        </div>
+    </div>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Código</th>
+                <th>Locação</th>
+                <th>Marca</th>
+                <th>Modelo</th>
+                <th>Quantidade</th>
+                <th>Observação</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in PecasOrdenados)
+            {
+                <tr class="peca-row">
+                    <td>@item.CodigoSistema</td>
+                    <td>@item.Locacao</td>
+                    <td>@item.Marca</td>
+                    <td>@item.Modelo</td>
+                    <td>@item.QuantidadeEntrada</td>
+                    <td>@item.Observacao</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+<script>
+
+    $(document).ready(function () {
+        $("#btn-EntradaEstoque").click(function (event) {
+            event.preventDefault();
+
+            $.get("/Estoque/ModalEntradaEstoque", function (data) {
+                $("#modalTOLEAGRI").html(data);
+                $("#modalEntradaEstoque").modal("show");
+            });
+        });
+    });
+
+    //         function ModalSaidaEstoque(idEstoque) {
+    //             event.preventDefault();
+
+    //             $.get("/Estoque/ModalSaidaEstoque", function (data) {
+    //                 $("#modalTOLEAGRI").html(data);
+    //                 $("#modalSaidaEstoque").modal("show");
+    //             });
+    //         });
+    // });
+
+</script>
