Ajeitei criação dos itens no banco, agora aparece o valor certo que preenchi no modal. Tentativa de deixar funcionando a busca de informações da peça pelo código do sistema, se não tiver o código no banco, o modal deve criar um novo

--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -30,15 +30,15 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in PecasOrdenados)
+            @foreach (var peca in Model)
             {
                 <tr class="peca-row">
-                    <td>@item.CodigoSistema</td>
-                    <td>@item.Locacao</td>
-                    <td>@item.Marca</td>
-                    <td>@item.Modelo</td>
-                    <td>@item.QuantidadeEntrada</td>
-                    <td>@item.Observacao</td>
+                    <td>@peca.CodigoSistema</td>
+                    <td>@peca.Locacao</td>
+                    <td>@peca.Marca</td>
+                    <td>@peca.Modelo</td>
+                    <td>@peca.QuantidadeEntrada</td>
+                    <td>@peca.Observacao</td>
                 </tr>
             }
         </tbody>
