--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<TOLEAGRI.Model.Domain.Peca>
 @{
     ViewData["Title"] = "Pecas";
-    var PecasOrdenados = Model.OrderByDescending(c => c.CodigoSistema).ToList();
+    var PecasOrdenados = Model.OrderBy(c => c.CodigoSistema).ToList();
 }
 
 <div style="padding:40px" id="container" class="justify-content-between">
@@ -9,8 +9,7 @@
         <h1 class="text-center mb-3">Estoque</h1>
         <div class="mb-4" style="display:flex;justify-content:space-between">
             <div>
-                <a class="btn btn-outline-dark" id="btn-EntradaEstoque">Entrada</a>
-                <a class="btn btn-outline-dark" id="btn-SaidaEstoque">Saída</a>
+                <a class="btn btn-outline-dark" id="btn-EntradaSaidaEstoque">Entrada/Saída</a>
                 <a type="button" asp-controller="Estoque" asp-action="Historico" class="btn btn-outline-dark">Histórico</a>
             </div>
             <div style="display:flex">
@@ -30,15 +29,20 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var peca in Model)
+            @foreach (var item in PecasOrdenados)
             {
                 <tr class="peca-row">
-                    <td>@peca.CodigoSistema</td>
-                    <td>@peca.Locacao</td>
-                    <td>@peca.Marca</td>
-                    <td>@peca.Modelo</td>
-                    <td>@peca.QuantidadeEntrada</td>
-                    <td>@peca.Observacao</td>
+                    <td>@item.CodigoSistema</td>
+                    <td>@item.Locacao</td>
+                    <td>@item.Marca</td>
+                    <td>@item.Modelo</td>
+                    <td>@item.QuantidadeEntrada</td>
+                    <td>@item.Observacao</td>
+                    <td style="width:1px">
+                        <a onClick="ModalDeletarEstoque(@item.Id)">
+                            <i class="bi bi-trash3-fill"></i>
+                        </a>
+                    </td>
                 </tr>
             }
         </tbody>
@@ -50,15 +54,24 @@
 <script>
 
     $(document).ready(function () {
-        $("#btn-EntradaEstoque").click(function (event) {
+        $("#btn-EntradaSaidaEstoque").click(function (event) {
             event.preventDefault();
 
-            $.get("/Estoque/ModalEntradaEstoque", function (data) {
+            $.get("/Estoque/ModalEntradaSaidaEstoque", function (data) {
                 $("#modalTOLEAGRI").html(data);
-                $("#modalEntradaEstoque").modal("show");
+                $("#modalEntradaSaidaEstoque").modal("show");
             });
         });
     });
+
+    function ModalDeletarEstoque(idPeca) {
+        event.preventDefault();
+
+        $.get("/Estoque/ModalDeletarEstoque?id=" + idPeca, function (data) {
+            $("#modalTOLEAGRI").html(data);
+            $("#modalDeletarEstoque").modal("show");
+        });
+    }
 
     //         function ModalSaidaEstoque(idEstoque) {
     //             event.preventDefault();
