Organização: Tirei DataEntrada, DataSaida e deixei somente "Data" e tirei QuantidadeEntrada e QuantidadeSaida e deixei somente "Quantidade" O modal abre e consigo puxar as informações da peça cadastrada ao pressionar enterr no codigo, posso editar ou criar, porém quando abro o modal e fecho sem fazer alteração, ele da erro e não abre mais

--- a/Views/Estoque/Historico.cshtml
+++ b/Views/Estoque/Historico.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<TOLEAGRI.Model.Domain.Peca>
 @{
     ViewData["Title"] = "Pecas";
-    var historicoList = Model.OrderByDescending(c => c.DataSaida.Date).ToList();
+    var historicoList = Model.OrderByDescending(c => c.Data.Date).ToList();
 }
 
 <div style="padding:40px" id="container" class="justify-content-between">
@@ -23,11 +23,9 @@
                 <th>Locação</th>
                 <th>Marca</th>
                 <th>Modelo</th>
-                <th>Quantidade Ent.</th>
-                <th>Quantidade Saída</th>
-                <th>Data de entrada</th>
-                <th>Data de Saída</th>
+                <th>Quantidade</th>
                 <th>Observação</th>
+                <th>Data</th>
             </tr>
         </thead>
         <tbody>
@@ -38,11 +36,9 @@
                     <td>@item.Locacao</td>
                     <td>@item.Marca</td>
                     <td>@item.Modelo</td>
-                    <td>@item.QuantidadeEntrada</td>
-                    <td>@item.QuantidadeSaida</td>
-                    <td>@item.DataEntrada</td>
-                    <td>@item.DataSaida</td>
+                    <td>@item.Quantidade</td>
                     <td>@item.Observacao</td>
+                    <td>@item.Data</td>
                 </tr>
             }
         </tbody>
