--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -26,6 +26,7 @@
                 <th>Modelo</th>
                 <th>Quantidade</th>
                 <th>Observação</th>
+                <th>Data</th>
             </tr>
         </thead>
         <tbody>
@@ -36,8 +37,9 @@
                     <td>@item.Locacao</td>
                     <td>@item.Marca</td>
                     <td>@item.Modelo</td>
-                    <td>@item.QuantidadeEntrada</td>
+                    <td>@item.Quantidade</td>
                     <td>@item.Observacao</td>
+                    <td>@item.Data</td>
                     <td style="width:1px">
                         <a onClick="ModalDeletarEstoque(@item.Id)">
                             <i class="bi bi-trash3-fill"></i>
@@ -53,16 +55,16 @@
 
 <script>
 
-    $(document).ready(function () {
-        $("#btn-EntradaSaidaEstoque").click(function (event) {
-            event.preventDefault();
+    // $(document).ready(function () {
+    //      $("#btn-EntradaSaidaEstoque").click(function (event) {
+    //          event.preventDefault();
 
-            $.get("/Estoque/ModalEntradaSaidaEstoque", function (data) {
-                $("#modalTOLEAGRI").html(data);
-                $("#modalEntradaSaidaEstoque").modal("show");
-            });
-        });
-    });
+    //         $.get("/Estoque/ModalEntradaSaidaEstoque", function (data) {
+    //              $("#modalTOLEAGRI").html(data);
+    //              $("#modalEntradaSaidaEstoque").modal("show");
+    //          });
+    //      });
+    //  });
 
     function ModalDeletarEstoque(idPeca) {
         event.preventDefault();
